2006-04-03  Anand Babu  <ab@zresearch.com>

	* doc/freeipmi-faq.texi: Updated x86-64 platform related
	questions.
	* doc/freeipmi.texi: Updated.
	* fish/bmc-config.8.pre.in: Updated.
	* freeipmi/fish/extensions/bc-common.scm: verbose flag. Closing
	bug #16113.
	* fish/extensions/bmc-config.scm: like wise.
	* fish/extensions/bc-section.scm: "Not supported" message
	printed only when verbose.

2006-04-03  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/include/freeipmi/ipmi-utils.h,
	libfreeipmi/src/ipmi-utils.c (ipmi_is_ipmi_1_5_packet,
	ipmi_is_ipmi_2_0_packet): New functions.

	* libfreeipmi/include/freeipmi/ipmi-rmcpplus-utils.h,
	libfreeipmi/src/ipmi-rmcpplus-utils.c
	(ipmi_rmcpplus_calculate_payload_type): New function.
	
2006-03-31  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: New ipmi_kcs_cmd() for kcs api.  Adjust UDM
	functions appropriately.

	* bmc-watchdog/: Implement with KCS api.

	* libfreeipmi/src/ipmi-semaphores.c (ipmi_mutex_init): Fix errno
	setting corner case.
	
2006-03-30  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_powercmd.c (_send_packet): Remove
	'is_retry' parameter which wasn't used.  Adjusted calls to
	_send_packet appropriately.
	
2006-03-29  Albert Chu <chu11@llnl.gov>

	* ipmipower/src/ipmipower_powercmd.c
	(ipmipower_powercmd_process_pending): Poll based on the minimum
	timeout remaining, not the maximum.
	
2006-03-28  Albert Chu <chu11@llnl.gov>

	* ipmiping/ipmiping.8.in, rmcpping/rmcpping.8.in: Add note about
	local ping.
	
2006-03-27  Albert Chu <chu11@llnl.gov>
	
	* ipmipower/src/ipmipower_wrappers.c (Ipmi_dump_lan_packet,
	Ipmi_dump_rmcp_packet, Ipmi_dump_rmcpplus_packet): Output
	debugging on error, do not exit.

	* ipmipower/src/ipmipower_check.c
	(ipmipower_check_outbound_sequence_number): Fix ipmi 2.0 corner
	cases on wrap around.

2006-03-24  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/: Added appropriate fixes for ipmi 2.0 to handle
	null passwords.

	* freeipmi.spec.in: Fix directory name bug.
